--- a/Src/PATCHNE/MAKEFILE
+++ b/Src/PATCHNE/MAKEFILE
@@ -23,15 +23,7 @@ $(OUTDIR):
 
 !if 0
 
-!ifndef MASM
-MASM=0
-!endif
-
-!if $(MASM)
-ASM=@ml -c -nologo -Sg -Fl$* -Fo$* -I$(INC32DIR)
-!else
-ASM=@jwasm -c -nologo -Sg -Fl$* -Fo$* -I$(INC32DIR)
-!endif
+AOPT= -c -nologo -Sg -Fl$* -Fo$* -I$(INC32DIR)
 
 LINK=jwlink.exe
 
@@ -39,16 +31,16 @@ $(OUTDIR)\$(PGM).EXE: $*.obj makefile
 	@$(LINK) format dos file $* name $*.EXE op q,map=$*.MAP
 
 $(OUTDIR)\$(PGM).obj: $(PGM).asm makefile
-	$(ASM) $(PGM).asm
+	@$(ASM) $(AOPT) $(PGM).asm
 
 !else
 
 $(OUTDIR)\$(PGM).EXE: $(PGM).asm makefile
-	@jwasm -nologo -mz -Sg -Fl$* -Fo$*.EXE -I$(INC32DIR) $(PGM).asm
+	@$(ASM) -nologo -mz -Sg -Fl$* -Fo$*.EXE -I$(INC32DIR) $(PGM).asm
 
 !endif
 
 clean:
 	@del $(OUTDIR)\*.exe
-	@del $(OUTDIR)\*.obj
+#	@del $(OUTDIR)\*.obj
 	@del $(OUTDIR)\*.lst
