--- a/SrcEmu/DUSER32/MAKEFILE
+++ b/SrcEmu/DUSER32/MAKEFILE
@@ -34,17 +34,9 @@ OBJMODS = $(OBJMODS:.\=DEBUG\)
 OBJMODS = $(OBJMODS:.\=RELEASE\)
 !endif
 
-!ifndef MASM
-MASM=0
-!endif
 MSLINK=0
 
-ASMOPT= -c -coff -nologo -Cp -Sg -D?FLAT=1 -D_USER32_=1 $(AOPTD) -I$(INC32DIR) -Fl$* -Fo$*
-!if $(MASM)
-ASM=@ml.exe $(ASMOPT)
-!else
-ASM=@jwasm.exe $(ASMOPT)
-!endif
+AOPT= -c -coff -nologo -Cp -Sg -D?FLAT=1 -D_USER32_=1 $(AOPTD) -I$(INC32DIR) -Fl$* -Fo$*
 
 LOPTS= /NOLOGO /MAP /DLL /NODEFAULTLIB /LIBPATH:$(LIBCOFF) /OPT:NOWIN98
 
@@ -55,7 +47,7 @@ LIBS=dkrnl32.lib dgdi32.lib
 .SUFFIXES: .asm .obj
 
 .asm{$(OUTDIR)}.obj:
-	$(ASM) $<
+	@$(ASM) $(AOPT) $<
 
 ALL: $(OUTDIR) $(OUTDIR)\$(NAME).DLL
 
@@ -100,4 +92,4 @@ clean:
 	@del $(OUTDIR)\*.lst
 	@del $(OUTDIR)\*.map
 	@del $(OUTDIR)\*.res
-	@del $(OUTDIR)\*.exp
+#	@del $(OUTDIR)\*.exp
