--- a/SrcEmu/IPHLPAPI/MAKEFILE
+++ b/SrcEmu/IPHLPAPI/MAKEFILE
@@ -29,17 +29,9 @@ OBJMODS = $(OBJMODS:.\=DEBUG\)
 OBJMODS = $(OBJMODS:.\=RELEASE\)
 !endif
 
-!ifndef MASM
-MASM=0
-!endif
 MSLINK=0
 
-ASMOPT= -c -nologo -coff -Cp -Sg -D?INGDI=1 $(AOPTD) -I$(INC32DIR) -D?FLAT=1 -Fl$* -Fo$* 
-!if $(MASM)
-ASM=@ml.exe $(ASMOPT)
-!else
-ASM=@jwasm.exe $(ASMOPT)
-!endif
+AOPT= -c -nologo -coff -Cp -Sg -D?INGDI=1 $(AOPTD) -I$(INC32DIR) -D?FLAT=1 -Fl$* -Fo$* 
 LOPTS= /NOLOGO /MAP /SUBSYSTEM:CONSOLE /DLL /ENTRY:DllMain /LIBPATH:$(LIBCOFF) /OPT:NOWIN98 /merge:.edata=.text
 
 NAME=IPHLPAPI
@@ -49,7 +41,7 @@ LIBS=dkrnl32.lib
 .SUFFIXES: .asm .obj
 
 .asm{$(OUTDIR)}.obj:
-	$(ASM) $<
+	@$(ASM) $(AOPT) $<
 
 ALL: $(OUTDIR) $(OUTDIR)\$(NAME).dll
 
