--- a/SrcEmu/OLE32/MAKEFILE
+++ b/SrcEmu/OLE32/MAKEFILE
@@ -29,17 +29,9 @@ OBJMODS = $(OBJMODS:.\=DEBUG\)
 OBJMODS = $(OBJMODS:.\=RELEASE\)
 !endif
 
-!ifndef MASM
-MASM=0
-!endif
 MSLINK=0
 
-ASMOPT= -c -nologo -coff -Sg $(AOPTD) -I$(INC32DIR) -D?FLAT=1 -Fl$* -Fo$* 
-!if $(MASM)
-ASM=@ml.exe $(ASMOPT)
-!else
-ASM=@jwasm.exe $(ASMOPT)
-!endif
+AOPT= -c -nologo -coff -Sg $(AOPTD) -I$(INC32DIR) -D?FLAT=1 -Fl$* -Fo$* 
 
 LOPTS= /NOLOGO /MAP /SUBSYSTEM:CONSOLE /DLL /NODEFAULTLIB /LIBPATH:$(LIBCOFF)
 
@@ -50,7 +42,7 @@ LIBS=dkrnl32.lib dadvapi.lib duser32.lib
 .SUFFIXES: .asm .obj
 
 .asm{$(OUTDIR)}.obj:
-	$(ASM) $<
+	@$(ASM) $(AOPT) $<
 
 ALL: $(OUTDIR) $(OUTDIR)\$(NAME).DLL
 
@@ -82,3 +74,4 @@ clean:
 	@del $(OUTDIR)\*.dll
 	@del $(OUTDIR)\*.lib
 	@del $(OUTDIR)\*.lst
+	@del $(OUTDIR)\*.map
