--- a/Src/DOSX/Makefile
+++ b/Src/DOSX/Makefile
@@ -2,23 +2,13 @@
 # creates DOSX.EXE
 # tools used:
 # - JWasm
-# - WLink
+# - JWlink
 
 !include <..\dirs>
 
 OUTDIR=RELEASE
 
 AOPTS= -c -nologo -Fo$* -Fl$* -Sg
-
-!ifndef MASM
-MASM=0
-!endif
-
-!if $(MASM)
-ASM=@ml.exe $(AOPTS)
-!else
-ASM=@jwasm.exe $(AOPTS)
-!endif
 
 LOPTS=$(XLOPTS)/ONE:NOE/NOE/MAP:FULL/NON/FAR/STACK:2048
 
@@ -28,13 +18,10 @@ $(OUTDIR):
 	@mkdir $(OUTDIR)
 
 $(OUTDIR)\DOSX.EXE: $*.obj makefile
-	@jwlink @<<
-format dos
-file $*.OBJ
-name $*.EXE
-op map=$*.MAP
-<<
+	@jwlink format dos file $*.OBJ name $*.EXE op q,map=$*.MAP
 
 $(OUTDIR)\dosx.obj: dosx.asm makefile
-	$(ASM) dosx.asm
+	@$(ASM) $(AOPTS) dosx.asm
 
+clean:
+	@if exist $(OUTDIR)\dosx.exe del $(OUTDIR)\dosx.exe
