--- a/SrcEmu/MAKEFILE
+++ b/SrcEmu/MAKEFILE
@@ -110,8 +110,10 @@ install:
 	@copy DSOUND\DSOUND.TXT            $(HXINST)\Doc
 	@copy OLE32\RELEASE\OLE32.DLL      $(HXINST)\Bin
 	@copy OLE32\RELEASE\OLE32S.LIB     $(HXINST)\Lib
+	@copy OLE32\OLE32.TXT              $(HXINST)\Doc
 	@copy OLEAUT32\RELEASE\OLEAUT32.DLL $(HXINST)\Bin
 	@copy OLEAUT32\RELEASE\OLEAUTOS.LIB $(HXINST)\Lib
+	@copy OLEAUT32\OLEAUT32.TXT        $(HXINST)\Doc
 	@copy SHELL32\RELEASE\SHELL32.DLL  $(HXINST)\Bin
 	@copy SHELL32\RELEASE\SHELL32.LIB  $(HXINST)\Lib\DSHELL32.LIB
 	@copy SHELL32\SHELL32.TXT          $(HXINST)\Doc
