DOSX: changed to tiny model

--- a/Src/DOSX/Makefile
+++ b/Src/DOSX/Makefile
@@ -8,7 +8,7 @@
 
 OUTDIR=RELEASE
 
-AOPTS= -c -nologo -Fo$* -Fl$* -Sg
+AOPTS= -mz -c -nologo -Fo$* -Fl$* -Sg
 
 LOPTS=$(XLOPTS)/ONE:NOE/NOE/MAP:FULL/NON/FAR/STACK:2048
 
@@ -17,11 +17,8 @@ ALL: $(OUTDIR) $(OUTDIR)\dosx.exe
 $(OUTDIR):
 	@mkdir $(OUTDIR)
 
-$(OUTDIR)\DOSX.EXE: $*.obj makefile
-	@jwlink format dos file $*.OBJ name $*.EXE op q,map=$*.MAP
-
-$(OUTDIR)\dosx.obj: dosx.asm makefile
-	@$(ASM) $(AOPTS) dosx.asm
+$(OUTDIR)\dosx.exe: dosx.asm makefile
+	@jwasm $(AOPTS) dosx.asm
 
 clean:
 	@if exist $(OUTDIR)\dosx.exe del $(OUTDIR)\dosx.exe
