--- a/Src/MAKEFILE
+++ b/Src/MAKEFILE
@@ -50,6 +50,7 @@ ALL:
 #   @$(MAKE) DEBUG=$(DEBUG) 
     cd ..\HXHELP
     @$(MAKE) DEBUG=$(DEBUG) 
+    @$(MAKE) -f HXHELP16.mak DEBUG=$(DEBUG) 
     cd ..\PATCHPE
     @$(MAKE) DEBUG=$(DEBUG) 
     cd ..\PATCHNE
@@ -133,6 +134,8 @@ install:
 	@copy HXHELP\Release\HXHELP.EXE   $(HXINST)\OWSupp\WDSupp
 	@copy HXHELP\HX.TRP\HX.TRP        $(HXINST)\OWSupp\WDSupp
 	@copy HXHELP\HXHELP.TXT           $(HXINST)\OWSupp\WDSupp
+	@copy HXHELP\Rel16\HXHELP16.EXE   $(HXINST)\OWSupp16\HXHP16.EXE
+	@copy HXHELP\HX.TRP\HX16.TRP      $(HXINST)\OWSupp16
 
 	@copy SHDPMI\Release\SHDPMI.EXE   $(HXINST)\Bin
 	@copy SHDPMI\Release\SHDPMIR.EXE  $(HXINST)\Bin
