--- a/Src/MAKEFILE
+++ b/Src/MAKEFILE
@@ -48,6 +48,8 @@ ALL:
     @$(MAKE) DEBUG=$(DEBUG) 
 #   cd ..\NESUPP
 #   @$(MAKE) DEBUG=$(DEBUG) 
+    cd ..\NESUPP16
+    @$(MAKE) DEBUG=$(DEBUG) 
     cd ..\HXHELP
     @$(MAKE) DEBUG=$(DEBUG) 
     @$(MAKE) -f HXHELP16.mak DEBUG=$(DEBUG) 
@@ -130,6 +132,7 @@ install:
 	@copy MZSUPP16\Release\JMPPM16M.OBJ $(HXINST)\Lib16
 	@copy MZSUPP16\Release\JMPPM16W.OBJ $(HXINST)\Lib16
 	@copy MZSUPP16\Release\InitPM16.OBJ $(HXINST)\Lib16
+	@copy NESUPP16\Release\InitApp.OBJ  $(HXINST)\Lib16
 
 	@copy HXHELP\Release\HXHELP.EXE   $(HXINST)\OWSupp\WDSupp
 	@copy HXHELP\HX.TRP\HX.TRP        $(HXINST)\OWSupp\WDSupp
