--- a/Src/MAKEFILE
+++ b/Src/MAKEFILE
@@ -135,10 +135,10 @@ install:
 	@copy NESUPP16\Release\InitApp.OBJ  $(HXINST)\Lib16
 
 	@copy HXHELP\Release\HXHELP.EXE   $(HXINST)\OWSupp\WDSupp
-	@copy HXHELP\HX.TRP\HX.TRP        $(HXINST)\OWSupp\WDSupp
+	@copy HXHELP\TRAP\HX.TRP          $(HXINST)\OWSupp\WDSupp
 	@copy HXHELP\HXHELP.TXT           $(HXINST)\OWSupp\WDSupp
 	@copy HXHELP\Rel16\HXHELP16.EXE   $(HXINST)\OWSupp16\HXHP16.EXE
-	@copy HXHELP\HX.TRP\HX16.TRP      $(HXINST)\OWSupp16
+	@copy HXHELP\TRAP\HX16.TRP        $(HXINST)\OWSupp16
 
 	@copy SHDPMI\Release\SHDPMI.EXE   $(HXINST)\Bin
 	@copy SHDPMI\Release\SHDPMIR.EXE  $(HXINST)\Bin
