makefile: copy hdpmi32i/hdpmi16i to hx bin dir

--- a/Src/MAKEFILE
+++ b/Src/MAKEFILE
@@ -68,6 +68,8 @@ ALL:
 install: 
 	@copy HDPMI\STD16\HDPMI16.EXE   $(HXINST)\Bin
 	@copy HDPMI\STD32\HDPMI32.EXE   $(HXINST)\Bin
+	@copy HDPMI\IOPL016\HDPMI16i.EXE $(HXINST)\Bin
+	@copy HDPMI\IOPL032\HDPMI32i.EXE $(HXINST)\Bin
 	@copy HDPMI\STUB16\HDPMI16.INC  $(HXINST)\Include
 	@copy HDPMI\STUB32\HDPMI32.INC  $(HXINST)\Include
 	@copy HDPMI\HDPMIST\HDPMIST.EXE $(HXINST)\Bin
