--- a/Src/EDITPE/MAKEFILE
+++ b/Src/EDITPE/MAKEFILE
@@ -38,7 +38,7 @@ $(LOPTD) format win pe
 file $*.obj
 name $*.exe 
 libpath $(LIBCOFF)
-lib { dkrnl32.lib libc32s.lib }
+lib { dkrnl32.lib $(CRTLIB) }
 op q,dosseg, m=$*.map, stub=dpmist32.bin $(LOPTD),start=_mainCRTStartup
 <<
 
@@ -51,7 +51,7 @@ format win pe
 file $*.obj
 name $*.exe 
 libpath $(LIBCOFF)
-lib { dkrnl32.lib libc32s.lib }
+lib { dkrnl32.lib $(CRTLIB) }
 op q,m=$*.map, stub=dpmist32.bin, start=_mainCRTStartup $(LOPTD)
 <<
 
